--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
     if(cm==='stone'){
         result='You loss';
     }
-    else if(cm==='papaer'){
-        result ='';
+    else if(cm==='Secisor'){
+        result ='tie';
     }
     else{
-        result='tie';
+        result='you win';
     }
-    alert(`you choose Papper, opponent choose ${cm}!   ${result}`);
+    alert(`you choose Secisor, opponent choose ${cm}!   ${result}`);
     ">Secisor</button>
      <script>     
      </script>
